// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tool contracts > fab-extract-knowledge contract matches snapshot 1`] = `
{
  "annotations": {
    "destructiveHint": false,
    "idempotentHint": true,
    "openWorldHint": false,
    "readOnlyHint": false,
    "title": "Extract pending knowledge entry",
  },
  "inputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "impact": {
        "description": "Consequences of ignoring this rule, used by the LLM to weight relevance vs cost. Each item ≤120 chars (e.g. 'O(n²) re-render on every frame', 'silent data loss on collision'). Optional — omit when impact is not observable.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "intent_clues": {
        "description": "Short LLM-readable triggers describing when this rule should fire and when it should not. Each item ≤80 chars, imperative phrasing (e.g. 'when editing Cocos UI batch code', 'NOT for non-batch contexts'). Optional — omit when the skill cannot infer cleanly.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "layer": {
        "description": "Storage layer for the pending entry. 'team' writes under the workspace; 'personal' writes under the user's home. Defaults to 'team'.",
        "enum": [
          "team",
          "personal",
        ],
        "type": "string",
      },
      "must_read_if": {
        "description": "One-line strong trigger; when this condition holds the entry is considered required reading. Single line ≤160 chars (e.g. 'touching anything under packages/cli/src/commands/hooks.ts'). Optional — omit when no single strong trigger fits.",
        "type": "string",
      },
      "onboard_slot": {
        "description": "Optional slot tag from the S5 onboarding set (tech-stack-decision / architecture-pattern / code-style-tone / build-system-idiom / domain-vocabulary); lets fabric-archive's first-run phase claim a project-tone slot. Skill propose-time only; never required.",
        "enum": [
          "tech-stack-decision",
          "architecture-pattern",
          "code-style-tone",
          "build-system-idiom",
          "domain-vocabulary",
        ],
        "type": "string",
      },
      "proposed_reason": {
        "description": "Why this entry is being proposed. Drives \`## Why proposed\` rendering and enables future maturity-promotion scoring.",
        "enum": [
          "explicit-user-mark",
          "diagnostic-then-fix",
          "decision-confirmation",
          "wrong-turn-revert",
          "new-dependency-or-pattern",
          "dismissal-with-reason",
        ],
        "type": "string",
      },
      "recent_paths": {
        "description": "Workspace paths recently touched in the source session — used as scope hints",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "relevance_paths": {
        "description": "Optional path anchors for narrow scope. Workspace-relative globs or paths. Omit to let the meta-builder default to []. Ignored when scope is broad (server preserves the array for audit).",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "relevance_scope": {
        "description": "Optional relevance scope. 'narrow' restricts plan-context-hint surfacing to relevance_paths; 'broad' always surfaces. Omit to let the meta-builder default to 'broad'. Personal + narrow is silently degraded to broad + [].",
        "enum": [
          "narrow",
          "broad",
        ],
        "type": "string",
      },
      "session_context": {
        "description": "3-5 line markdown blob — session goal + key turning point. Reviewed by future-self without transcript access.",
        "minLength": 20,
        "type": "string",
      },
      "slug": {
        "description": "URL-safe short identifier proposed by the Skill; server may sanitize",
        "type": "string",
      },
      "source_sessions": {
        "description": "Originating session ids; correlates with Event Ledger records. Array form (T5+, rc.23 made it the sole accepted shape).",
        "items": {
          "minLength": 1,
          "type": "string",
        },
        "minItems": 1,
        "type": "array",
      },
      "tech_stack": {
        "description": "Tech stack / languages / frameworks the rule applies to (e.g. ['typescript', 'cocos-creator', 'nodejs']). Inferred from recent_paths file extensions and manifest files. Optional — omit when the rule is stack-agnostic.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "type": {
        "description": "Knowledge type bucket (plural form, mirrors directory layout)",
        "enum": [
          "decisions",
          "pitfalls",
          "guidelines",
          "models",
          "processes",
        ],
        "type": "string",
      },
      "user_messages_summary": {
        "description": "Skill-side summary of the user's intent/messages, kept compact",
        "type": "string",
      },
    },
    "required": [
      "recent_paths",
      "user_messages_summary",
      "type",
      "slug",
      "proposed_reason",
      "session_context",
    ],
    "type": "object",
  },
  "outputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "idempotency_key": {
        "description": "Stable key derived from inputs; identical inputs yield identical key",
        "type": "string",
      },
      "pending_path": {
        "description": "Workspace-relative path to the persisted pending entry",
        "type": "string",
      },
      "warnings": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "action_hint": {
              "type": "string",
            },
            "code": {
              "type": "string",
            },
            "file": {
              "type": "string",
            },
            "line": {
              "type": "number",
            },
          },
          "required": [
            "code",
            "file",
            "action_hint",
          ],
          "type": "object",
        },
        "type": "array",
      },
    },
    "required": [
      "pending_path",
      "idempotency_key",
    ],
    "type": "object",
  },
}
`;

exports[`tool contracts > fab-review contract matches snapshot 1`] = `
{
  "annotations": {
    "destructiveHint": false,
    "idempotentHint": false,
    "openWorldHint": false,
    "readOnlyHint": false,
    "title": "Review pending knowledge entries",
  },
  "inputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "anyOf": [
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "list",
            "type": "string",
          },
          "filters": {
            "additionalProperties": false,
            "properties": {
              "created_after": {
                "format": "date-time",
                "type": "string",
              },
              "layer": {
                "enum": [
                  "team",
                  "personal",
                  "both",
                ],
                "type": "string",
              },
              "maturity": {
                "enum": [
                  "draft",
                  "verified",
                  "proven",
                ],
                "type": "string",
              },
              "tags": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "type": {
                "enum": [
                  "decisions",
                  "pitfalls",
                  "guidelines",
                  "models",
                  "processes",
                ],
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "required": [
          "action",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "approve",
            "type": "string",
          },
          "pending_paths": {
            "items": {
              "type": "string",
            },
            "minItems": 1,
            "type": "array",
          },
        },
        "required": [
          "action",
          "pending_paths",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "reject",
            "type": "string",
          },
          "pending_paths": {
            "items": {
              "type": "string",
            },
            "minItems": 1,
            "type": "array",
          },
          "reason": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "action",
          "pending_paths",
          "reason",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "modify",
            "type": "string",
          },
          "changes": {
            "additionalProperties": false,
            "properties": {
              "layer": {
                "enum": [
                  "team",
                  "personal",
                ],
                "type": "string",
              },
              "maturity": {
                "enum": [
                  "draft",
                  "verified",
                  "proven",
                ],
                "type": "string",
              },
              "relevance_paths": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "relevance_scope": {
                "enum": [
                  "narrow",
                  "broad",
                ],
                "type": "string",
              },
              "summary": {
                "type": "string",
              },
              "tags": {
                "items": {
                  "type": "string",
                },
                "type": "array",
              },
              "title": {
                "type": "string",
              },
            },
            "type": "object",
          },
          "pending_path": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "action",
          "pending_path",
          "changes",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "search",
            "type": "string",
          },
          "filters": {
            "$ref": "#/anyOf/0/properties/filters",
          },
          "query": {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "action",
          "query",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "defer",
            "type": "string",
          },
          "pending_paths": {
            "items": {
              "type": "string",
            },
            "minItems": 1,
            "type": "array",
          },
          "reason": {
            "type": "string",
          },
          "until": {
            "format": "date-time",
            "type": "string",
          },
        },
        "required": [
          "action",
          "pending_paths",
        ],
        "type": "object",
      },
    ],
  },
  "outputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "anyOf": [
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "list",
            "type": "string",
          },
          "items": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "layer": {
                  "enum": [
                    "team",
                    "personal",
                  ],
                  "type": "string",
                },
                "maturity": {
                  "enum": [
                    "draft",
                    "verified",
                    "proven",
                  ],
                  "type": "string",
                },
                "origin": {
                  "enum": [
                    "team",
                    "personal",
                  ],
                  "type": "string",
                },
                "pending_path": {
                  "type": "string",
                },
                "summary": {
                  "type": "string",
                },
                "tags": {
                  "items": {
                    "type": "string",
                  },
                  "type": "array",
                },
                "title": {
                  "type": "string",
                },
                "type": {
                  "enum": [
                    "decisions",
                    "pitfalls",
                    "guidelines",
                    "models",
                    "processes",
                  ],
                  "type": "string",
                },
              },
              "required": [
                "pending_path",
                "type",
                "layer",
                "maturity",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "action_hint": {
                  "type": "string",
                },
                "code": {
                  "type": "string",
                },
                "file": {
                  "type": "string",
                },
                "line": {
                  "type": "number",
                },
              },
              "required": [
                "code",
                "file",
                "action_hint",
              ],
              "type": "object",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "items",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "approve",
            "type": "string",
          },
          "approved": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "pending_path": {
                  "type": "string",
                },
                "stable_id": {
                  "type": "string",
                },
              },
              "required": [
                "pending_path",
                "stable_id",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "approved",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "reject",
            "type": "string",
          },
          "rejected": {
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "rejected",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "modify",
            "type": "string",
          },
          "new_stable_id": {
            "type": "string",
          },
          "pending_path": {
            "type": "string",
          },
          "prior_stable_id": {
            "type": "string",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "pending_path",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "search",
            "type": "string",
          },
          "items": {
            "items": {
              "$ref": "#/anyOf/0/properties/items/items",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "items",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "action": {
            "const": "defer",
            "type": "string",
          },
          "deferred": {
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "warnings": {
            "items": {
              "$ref": "#/anyOf/0/properties/warnings/items",
            },
            "type": "array",
          },
        },
        "required": [
          "action",
          "deferred",
        ],
        "type": "object",
      },
    ],
  },
}
`;

exports[`tool contracts > knowledge-sections contract matches snapshot 1`] = `
{
  "annotations": {
    "destructiveHint": false,
    "idempotentHint": true,
    "openWorldHint": false,
    "readOnlyHint": true,
    "title": "Filter rule sections",
  },
  "inputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "ai_selected_stable_ids": {
        "description": "Stable ids picked from fab_plan_context entries[].description_index[].stable_id where selectable=true; choose 1..N to fetch bodies for",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "ai_selection_reasons": {
        "additionalProperties": {
          "minLength": 1,
          "type": "string",
        },
        "description": "Reason for each AI-selected L1 stable_id",
        "type": "object",
      },
      "client_hash": {
        "description": "Optional caller-provided client hash propagated into knowledge_consumed events",
        "type": "string",
      },
      "correlation_id": {
        "description": "Optional caller-provided correlation id for Event Ledger records",
        "type": "string",
      },
      "selection_token": {
        "description": "Selection token returned by fab_plan_context",
        "minLength": 1,
        "type": "string",
      },
      "session_id": {
        "description": "Optional caller-provided session id for Event Ledger records",
        "type": "string",
      },
    },
    "required": [
      "selection_token",
      "ai_selected_stable_ids",
      "ai_selection_reasons",
    ],
    "type": "object",
  },
  "outputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "diagnostics": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "code": {
              "const": "missing_knowledge_metadata",
              "type": "string",
            },
            "message": {
              "type": "string",
            },
            "severity": {
              "const": "warn",
              "type": "string",
            },
            "stable_id": {
              "type": "string",
            },
          },
          "required": [
            "code",
            "severity",
            "stable_id",
            "message",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "precedence": {
        "description": "DEPRECATED (removed in rc.24): hardcoded L2/L1/L0 precedence tuple from the retired rc.5 selection ceremony. Use rules[].level instead.",
        "items": [
          {
            "const": "L2",
            "type": "string",
          },
          {
            "const": "L1",
            "type": "string",
          },
          {
            "const": "L0",
            "type": "string",
          },
        ],
        "maxItems": 3,
        "minItems": 3,
        "type": "array",
      },
      "redirect_to": {
        "additionalProperties": false,
        "description": "Post-layer-flip redirect. Populated when stable_id changed after token mint (rc.3 fab_review/modify).",
        "properties": {
          "stable_id": {
            "type": "string",
          },
        },
        "required": [
          "stable_id",
        ],
        "type": "object",
      },
      "revision_hash": {
        "type": "string",
      },
      "rules": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "body": {
              "type": "string",
            },
            "level": {
              "enum": [
                "L0",
                "L1",
                "L2",
              ],
              "type": "string",
            },
            "path": {
              "type": "string",
            },
            "stable_id": {
              "type": "string",
            },
          },
          "required": [
            "stable_id",
            "level",
            "path",
            "body",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "selected_stable_ids": {
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "warnings": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "action_hint": {
              "type": "string",
            },
            "code": {
              "type": "string",
            },
            "file": {
              "type": "string",
            },
            "line": {
              "type": "number",
            },
          },
          "required": [
            "code",
            "file",
            "action_hint",
          ],
          "type": "object",
        },
        "type": "array",
      },
    },
    "required": [
      "revision_hash",
      "selected_stable_ids",
      "rules",
      "diagnostics",
    ],
    "type": "object",
  },
}
`;

exports[`tool contracts > plan-context contract matches snapshot 1`] = `
{
  "annotations": {
    "destructiveHint": false,
    "idempotentHint": true,
    "openWorldHint": false,
    "readOnlyHint": true,
    "title": "Plan rule context",
  },
  "inputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "client_hash": {
        "description": "Revision hash from a prior fab_plan_context response; enables stale detection",
        "type": "string",
      },
      "correlation_id": {
        "description": "Optional caller-provided correlation id for Event Ledger records",
        "type": "string",
      },
      "detected_entities": {
        "additionalProperties": {
          "items": {
            "type": "string",
          },
          "type": "array",
        },
        "description": "Optional path-keyed detected entities for the requirement profile",
        "type": "object",
      },
      "intent": {
        "description": "User-stated requirement or implementation intent; used only to build a neutral requirement profile",
        "type": "string",
      },
      "known_tech": {
        "description": "Known technologies involved in the requirement profile",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "layer_filter": {
        "description": "Restrict description_index to the named layer. Default: fabric-config.default_layer_filter (TASK-002).",
        "enum": [
          "team",
          "personal",
          "both",
        ],
        "type": "string",
      },
      "paths": {
        "description": "Candidate file paths to build neutral rule selection context for",
        "items": {
          "type": "string",
        },
        "minItems": 1,
        "type": "array",
      },
      "session_id": {
        "description": "Optional caller-provided session id for Event Ledger records",
        "type": "string",
      },
      "target_paths": {
        "description": "Path context for narrow-scope relevance filtering. Defaults to \`paths\`; empty = no filter.",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
    },
    "required": [
      "paths",
    ],
    "type": "object",
  },
  "outputSchema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "auto_healed": {
        "type": "boolean",
      },
      "entries": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "description_index": {
              "items": {
                "additionalProperties": false,
                "properties": {
                  "description": {
                    "additionalProperties": false,
                    "properties": {
                      "created_at": {
                        "type": "string",
                      },
                      "entities": {
                        "items": {
                          "type": "string",
                        },
                        "type": "array",
                      },
                      "id": {
                        "type": "string",
                      },
                      "impact": {
                        "items": {
                          "type": "string",
                        },
                        "type": "array",
                      },
                      "intent_clues": {
                        "items": {
                          "type": "string",
                        },
                        "type": "array",
                      },
                      "knowledge_layer": {
                        "enum": [
                          "personal",
                          "team",
                        ],
                        "type": "string",
                      },
                      "knowledge_type": {
                        "enum": [
                          "model",
                          "decision",
                          "guideline",
                          "pitfall",
                          "process",
                        ],
                        "type": "string",
                      },
                      "layer_reason": {
                        "type": "string",
                      },
                      "maturity": {
                        "enum": [
                          "draft",
                          "verified",
                          "proven",
                        ],
                        "type": "string",
                      },
                      "must_read_if": {
                        "type": "string",
                      },
                      "summary": {
                        "type": "string",
                      },
                      "tech_stack": {
                        "items": {
                          "type": "string",
                        },
                        "type": "array",
                      },
                    },
                    "required": [
                      "summary",
                      "intent_clues",
                      "tech_stack",
                      "impact",
                      "must_read_if",
                    ],
                    "type": "object",
                  },
                  "layer": {
                    "$ref": "#/properties/entries/items/properties/description_index/items/properties/description/properties/knowledge_layer",
                  },
                  "layer_reason": {
                    "type": "string",
                  },
                  "level": {
                    "enum": [
                      "L0",
                      "L1",
                      "L2",
                    ],
                    "type": "string",
                  },
                  "maturity": {
                    "$ref": "#/properties/entries/items/properties/description_index/items/properties/description/properties/maturity",
                  },
                  "relevance_paths": {
                    "items": {
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "relevance_scope": {
                    "enum": [
                      "narrow",
                      "broad",
                    ],
                    "type": "string",
                  },
                  "required": {
                    "type": "boolean",
                  },
                  "selectable": {
                    "type": "boolean",
                  },
                  "stable_id": {
                    "type": "string",
                  },
                  "tags": {
                    "items": {
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "type": {
                    "$ref": "#/properties/entries/items/properties/description_index/items/properties/description/properties/knowledge_type",
                  },
                },
                "required": [
                  "stable_id",
                  "level",
                  "required",
                  "selectable",
                  "description",
                ],
                "type": "object",
              },
              "type": "array",
            },
            "path": {
              "type": "string",
            },
            "requirement_profile": {
              "additionalProperties": false,
              "properties": {
                "detected_entities": {
                  "items": {
                    "type": "string",
                  },
                  "type": "array",
                },
                "extension": {
                  "type": "string",
                },
                "known_tech": {
                  "items": {
                    "type": "string",
                  },
                  "type": "array",
                },
                "path_segments": {
                  "items": {
                    "type": "string",
                  },
                  "type": "array",
                },
                "target_path": {
                  "type": "string",
                },
                "user_intent": {
                  "type": "string",
                },
              },
              "required": [
                "target_path",
                "path_segments",
                "extension",
                "known_tech",
                "user_intent",
                "detected_entities",
              ],
              "type": "object",
            },
          },
          "required": [
            "path",
            "requirement_profile",
            "description_index",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "previous_revision_hash": {
        "type": "string",
      },
      "revision_hash": {
        "type": "string",
      },
      "selection_token": {
        "type": "string",
      },
      "shared": {
        "additionalProperties": false,
        "properties": {
          "description_index": {
            "items": {
              "$ref": "#/properties/entries/items/properties/description_index/items",
            },
            "type": "array",
          },
          "preflight_diagnostics": {
            "items": {
              "additionalProperties": false,
              "properties": {
                "code": {
                  "const": "missing_description",
                  "type": "string",
                },
                "message": {
                  "type": "string",
                },
                "path": {
                  "type": "string",
                },
                "severity": {
                  "const": "warn",
                  "type": "string",
                },
                "stable_ids": {
                  "items": {
                    "type": "string",
                  },
                  "type": "array",
                },
              },
              "required": [
                "code",
                "severity",
                "message",
              ],
              "type": "object",
            },
            "type": "array",
          },
        },
        "required": [
          "description_index",
          "preflight_diagnostics",
        ],
        "type": "object",
      },
      "stale": {
        "type": "boolean",
      },
      "warnings": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "action_hint": {
              "type": "string",
            },
            "code": {
              "type": "string",
            },
            "file": {
              "type": "string",
            },
            "line": {
              "type": "number",
            },
          },
          "required": [
            "code",
            "file",
            "action_hint",
          ],
          "type": "object",
        },
        "type": "array",
      },
    },
    "required": [
      "revision_hash",
      "stale",
      "selection_token",
      "entries",
      "shared",
    ],
    "type": "object",
  },
}
`;
